--- a/package.json
+++ b/package.json
@@ -1,11 +1,33 @@
 {
-  "name": "pamo.github.io",
-  "version": "0.1.0",
+  "name": "zf5_project",
+  "description": "",
+  "version": "0.0.1",
+  "description": "",
+  "homepage": "",
+  "author": {
+    "name": "",
+    "email": ""
+  },
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
   "devDependencies": {
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-autoprefixer": "~0.6.3",
-    "grunt": "^0.4.4",
-    "grunt-jekyll": "~0.4.1",
-    "grunt-sass": "~0.9.0"
+    "load-grunt-tasks": "~0.6.0",
+    "grunt-contrib-sass": "~0.7.3",
+    "grunt": "~0.4.5",
+    "grunt-contrib-jade": "~0.12.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.10.0",
+    "grunt-contrib-uglify": "~0.5.1",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-connect": "~0.8.0",
+    "grunt-wiredep": "~1.8.0",
+    "grunt-usemin": "~2.3.0",
+    "grunt-contrib-imagemin": "0.7.1",
+    "grunt-newer": "~0.7.0"
   }
 }
