--- a/package.json
+++ b/package.json
@@ -1,33 +1,17 @@
 {
-  "name": "zf5_project",
+  "name": "pamo.github.io",
+  "version": "0.0.0",
   "description": "",
-  "version": "0.0.1",
-  "description": "",
-  "homepage": "",
-  "author": {
-    "name": "",
-    "email": ""
+  "main": "gulpfile.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "load-grunt-tasks": "~0.6.0",
-    "grunt-contrib-sass": "~0.7.3",
-    "grunt": "~0.4.5",
-    "grunt-contrib-jade": "~0.12.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.10.0",
-    "grunt-contrib-uglify": "~0.5.1",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-connect": "~0.8.0",
-    "grunt-wiredep": "~1.8.0",
-    "grunt-usemin": "~2.3.0",
-    "grunt-contrib-imagemin": "0.7.1",
-    "grunt-newer": "~0.7.0"
+    "browser-sync": "^1.3.5",
+    "gulp": "^3.8.5",
+    "gulp-autoprefixer": "0.0.7",
+    "gulp-sass": "^0.7.2"
   }
 }
