Images and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Poco a poco
+name: poco a poco
 markdown: redcarpet
 highlighter: pygments # or rouge or null
 exclude: ["node_modules", "gulpfile.js", "package.json"]
