--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ name: poco a poco
 markdown: redcarpet
 highlighter: pygments # or rouge or null
 exclude: ["node_modules", "gulpfile.js", "package.json"]
+gems: ["emoji_for_jekyll"]
