Added about me, cleaned up css, imagemin

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: poco a poco
+name: Pamela Ocampo
 markdown: redcarpet
 highlighter: pygments # or rouge or null
 exclude: ["node_modules", "gulpfile.js", "package.json"]
