--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browser-sync": "^1.3.5",
     "gulp": "^3.8.5",
     "gulp-autoprefixer": "0.0.7",
+    "gulp-image-optimization": "^0.1.3",
     "gulp-sass": "^0.7.2"
   }
 }
