Manage drafts and permalinks with categories

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ markdown: redcarpet
 highlighter: pygments # or rouge or null
 exclude: ["node_modules", "gulpfile.js", "package.json"]
 gems: ["emoji_for_jekyll"]
+permalink: /words/:year/:month/:day/:title.html
