--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,10 @@ name: Pamela Ocampo
 markdown: redcarpet
 highlighter: pygments # or rouge or null
 exclude: ["node_modules", "gulpfile.js", "package.json"]
-gems: ["emoji_for_jekyll"]
 permalink: /words/:year/:month/:day/:title.html
+gems:
+- jekyll-mentions
+- jemoji
+- jekyll-redirect-from
+- jekyll-sitemap
+jekyll-mentions: https://twitter.com
