--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,12 @@ name: Pamela Ocampo
 markdown: redcarpet
 highlighter: pygments # or rouge or null
 exclude: ["node_modules", "gulpfile.js", "package.json"]
+image: ./images/background.jpg
 permalink: /words/:year/:month/:day/:title.html
 gems:
 - jekyll-mentions
 - jemoji
 - jekyll-redirect-from
 - jekyll-sitemap
+- jekyll-auto-image
 jekyll-mentions: https://twitter.com
