--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^3.8.5",
     "gulp-autoprefixer": "0.0.7",
     "gulp-image-optimization": "^0.1.3",
-    "gulp-sass": "^0.7.2"
+    "gulp-sass": "^0.7.2",
+    "gulp-notify": "^2.2.0"
   }
 }
