--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-autoprefixer": "0.0.7",
     "gulp-image-optimization": "^0.1.3",
     "gulp-sass": "^0.7.2",
-    "gulp-notify": "^2.2.0"
+    "gulp-notify": "^2.2.0",
+    "gulp-purifycss": "^0.2.0"
   }
 }
