--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "node-bourbon": "^4.2.3",
+    "node-neat": "^1.7.2"
+  },
   "devDependencies": {
     "browser-sync": "^1.3.5",
     "gulp": "^3.8.5",
