--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "node-bourbon": "^4.2.3",
-    "node-neat": "^1.7.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "browser-sync": "^1.3.5",
     "gulp": "^3.8.5",
@@ -19,6 +16,7 @@
     "gulp-image-optimization": "^0.1.3",
     "gulp-notify": "^2.2.0",
     "gulp-purifycss": "^0.2.0",
-    "gulp-sass": "^2.0.3"
+    "gulp-sass": "^2.0.3",
+    "wiredep": "^3.0.0-beta"
   }
 }
