--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "browser-sync": "^1.3.5",
     "gulp": "^3.8.5",
     "gulp-autoprefixer": "0.0.7",
-    "gulp-image-optimization": "^0.1.3",
+    "gulp-imagemin": "^2.3.0",
     "gulp-notify": "^2.2.0",
     "gulp-purifycss": "^0.2.0",
     "gulp-sass": "^2.0.3",
+    "imagemin-gifsicle": "^4.2.0",
+    "imagemin-jpegtran": "^4.3.0",
+    "imagemin-pngquant": "^4.1.2",
     "wiredep": "^3.0.0-beta"
   }
 }
