--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browser-sync": "^1.3.5",
     "gulp": "^3.8.5",
     "gulp-autoprefixer": "0.0.7",
+    "gulp-cache": "^0.2.10",
     "gulp-imagemin": "^2.3.0",
     "gulp-notify": "^2.2.0",
     "gulp-purifycss": "^0.2.0",
