--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^0.14.7",
     "react-document-title": "^2.0.1",
     "react-dom": "^0.14.7",
+    "react-icons": "^1.0.3",
     "react-responsive-grid": "^0.3.1",
     "react-router": "^2.0.0",
     "safe-access": "^0.1.0",
