Adds exit status to npm run lint script to prevent eslint errors

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Gatsby Blog",
   "main": "n/a",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
+    "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public . ; exit 0",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "gatsby develop"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pamo/pamo.github.io.git"
+    "url": "https://github.com/pamo/pamo.github.io.git"
   },
   "keywords": [
     "gatsby",
