--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public . ; exit 0",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "gatsby develop",
-    "deploy": "gatsby build && gh-pages -d public"
+    "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "repository": {
     "type": "git",
