--- a/package.json
+++ b/package.json
@@ -25,8 +25,13 @@
   "license": "MIT",
   "homepage": "http://likescoffee.com",
   "dependencies": {
+    "front-matter": "^2.0.6",
+    "highlight.js": "^9.2.0",
     "lodash": "^4.5.0",
+    "markdown-it": "^6.0.0",
+    "markdown-it-emoji": "^1.1.0",
     "moment": "^2.11.2",
+    "object-assign": "^4.0.1",
     "react": "^0.14.7",
     "react-document-title": "^2.0.1",
     "react-dom": "^0.14.7",
@@ -44,6 +49,7 @@
     "eslint-config-airbnb": "^5.0.1",
     "eslint-plugin-react": "^3.16.1",
     "gh-pages": "^0.11.0",
+    "image-webpack-loader": "^1.6.3",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.0",
     "redbox-react": "^1.0.1"
