--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-config-airbnb": "^5.0.1",
     "eslint-plugin-react": "^3.16.1",
     "fs": "0.0.2",
+    "fs-extra": "^0.26.7",
     "gh-pages": "^0.11.0",
     "image-webpack-loader": "^1.6.3",
     "js-yaml": "^3.5.4",
