--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "front-matter": "^2.0.6",
     "gatsby": "^0.8.10",
     "highlight.js": "^9.2.0",
+    "imagemin": "^4.0.0",
     "lodash": "^4.5.0",
     "markdown-it": "^6.0.0",
     "markdown-it-emoji": "^1.1.0",
@@ -53,6 +54,7 @@
     "fs": "0.0.2",
     "fs-extra": "^0.26.7",
     "gh-pages": "^0.11.0",
+    "glob": "^7.0.3",
     "image-webpack-loader": "^1.6.3",
     "js-yaml": "^3.5.4",
     "mkdirp": "^0.5.1",
