Replaces react-document-title with react-helmet ⛑🏈 to close #1

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 blogTitle = "likes coffee"
-blogUrl = "http://likescoffee.com/"
+blogUrl = "https://likescoffee.com/"
 authorName = "Pamela Ocampo"
 authorTwitter = "@pmocampo"
 linkPrefix = "/"
