--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "moment": "^2.11.2",
     "object-assign": "^4.0.1",
     "react": "^0.14.7",
-    "react-document-title": "^2.0.1",
     "react-dom": "^0.14.7",
     "react-google-analytics": "^0.2.0",
+    "react-helmet": "^3.0.0",
     "react-icons": "^1.0.3",
     "react-responsive-grid": "^0.3.1",
     "react-router": "^2.0.0",
