--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
   "license": "MIT",
   "homepage": "http://likescoffee.com",
   "dependencies": {
+    "async": "^2.0.0-rc.3",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "front-matter": "^2.0.6",
-    "gatsby": "^0.8.11",
+    "gatsby": "^0.10.0",
     "highlight.js": "^9.2.0",
     "imagemin": "^4.0.0",
     "lodash": "^4.5.0",
@@ -35,32 +40,26 @@
     "markdown-it-emoji": "^1.1.0",
     "moment": "^2.11.2",
     "object-assign": "^4.0.1",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "react": "15.0.1",
+    "react-dom": "15.0.1",
     "react-google-analytics": "^0.2.0",
     "react-helmet": "^3.0.0",
-    "react-icons": "^1.0.3",
-    "react-responsive-grid": "^0.3.1",
-    "react-router": "^2.0.0",
+    "react-icons": "2.0.1",
+    "react-responsive-grid": "^0.3.3",
+    "react-router": "^2.0.1",
     "safe-access": "^0.1.0",
     "typography": "^0.7.0",
     "underscore.string": "^3.2.3"
   },
   "devDependencies": {
-    "babel-plugin-react-transform": "^1.1.1",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^5.0.1",
-    "eslint-plugin-react": "^3.16.1",
-    "fs": "0.0.2",
-    "fs-extra": "^0.26.7",
+    "eslint": "^2.4.0",
+    "eslint-config-airbnb": "^6.1.0",
+    "eslint-plugin-react": "^4.2.1",
+    "fs-extra": "0.28.0",
     "gh-pages": "^0.11.0",
     "glob": "^7.0.3",
-    "image-webpack-loader": "^1.6.3",
     "js-yaml": "^3.5.4",
     "mkdirp": "^0.5.1",
-    "prompt": "^1.0.0",
-    "react-transform-catch-errors": "^1.0.0",
-    "react-transform-hmr": "^1.0.0",
-    "redbox-react": "^1.0.1"
+    "prompt": "^1.0.0"
   }
 }
