--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public . ; exit 0",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm run lint && gatsby develop",
-    "deploy": "gatsby build && gh-pages -d public -b master",
-    "write": "node new_post.js"
+    "start": "npm run lint && gatsby develop",
+    "build": "gatsby build && gh-pages -d public -b master",
+    "publish": "node new_post.js"
   },
   "repository": {
     "type": "git",
