--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "n/a",
   "scripts": {
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public . ; exit 0",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "snyk test",
     "start": "npm run lint && gatsby develop",
     "deploy": "gatsby build && gh-pages -d public -b master",
     "publish": "node new_post.js"
@@ -31,11 +31,11 @@
   "dependencies": {
     "async": "^2.0.0-rc.3",
     "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "front-matter": "^2.0.6",
-    "gatsby": "^0.10.0",
+    "gatsby": "^0.10.2",
     "highlight.js": "^9.2.0",
     "imagemin": "^4.0.0",
     "lodash": "^4.5.0",
@@ -63,6 +63,7 @@
     "glob": "^7.0.3",
     "js-yaml": "^3.5.4",
     "mkdirp": "^0.5.1",
-    "prompt": "^1.0.0"
+    "prompt": "^1.0.0",
+    "snyk": "^1.16.0"
   }
 }
