--- a/.eslintrc
+++ b/.eslintrc
@@ -4,8 +4,8 @@
     "indent": [2, 2, {"SwitchCase": 1}],
     "no-console": [0],
     "func-names": [0],
-    "semi": [2, "never"],
     "no-extra-semi": [2],
+    "no-param-reassign": [0],
     "no-else-return": [0],
     "space-infix-ops": [0],
     "react/prefer-es6-class": [0],
