--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "react-responsive-grid": "^0.3.3",
     "react-router": "^2.0.1",
     "safe-access": "^0.1.0",
+    "snyk": "^1.17.1",
     "typography": "^0.7.0",
-    "underscore.string": "^3.2.3",
-    "snyk": "^1.17.1"
+    "underscore.string": "^3.2.3"
   },
   "devDependencies": {
     "eslint": "^2.4.0",
