--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lodash": "^4.5.0",
     "markdown-it": "^6.0.0",
     "markdown-it-emoji": "^1.1.0",
+    "mdfigcaption": "^0.1.1",
     "moment": "^2.11.2",
     "object-assign": "^4.0.1",
     "react": "15.0.1",
