--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Gatsby Blog",
   "main": "n/a",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public . ; exit 0",
+    "lint": "eslint --ext .js,.jsx --ignore-pattern public . ; exit 0",
     "test": "snyk test",
     "start": "npm run lint && gatsby develop",
     "deploy": "gatsby build && gh-pages -d public -b master",
@@ -29,20 +29,21 @@
   "homepage": "http://likescoffee.com",
   "dependencies": {
     "async": "^2.0.0-rc.3",
-    "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
     "front-matter": "^2.0.6",
+    "fs-extra": "0.28.0",
     "gatsby": "^0.11.7",
+    "glob": "^7.0.3",
     "highlight.js": "^9.2.0",
     "imagemin": "^5.2.2",
+    "js-yaml": "^3.5.4",
     "lodash": "^4.5.0",
     "markdown-it": "^7.0.1",
     "markdown-it-emoji": "^1.2.0",
     "mdfigcaption": "^0.1.1",
+    "mkdirp": "^0.5.1",
     "moment": "^2.11.2",
     "object-assign": "^4.0.1",
+    "prompt": "^1.0.0",
     "react": "15.0.1",
     "react-dom": "15.0.1",
     "react-google-analytics": "^0.2.0",
@@ -60,15 +61,15 @@
   },
   "devDependencies": {
     "babel-plugin-add-module-exports": "^0.1.4",
-    "eslint": "^2.4.0",
-    "eslint-config-airbnb": "^6.1.0",
-    "eslint-plugin-react": "^4.2.1",
-    "fs-extra": "0.28.0",
-    "gh-pages": "^0.11.0",
-    "glob": "^7.0.3",
-    "js-yaml": "^3.5.4",
-    "mkdirp": "^0.5.1",
-    "prompt": "^1.0.0"
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^3.9.0",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1",
+    "gh-pages": "^0.11.0"
   },
   "snyk": true
 }
