--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,9 @@
     "space-infix-ops": [0],
     "react/jsx-filename-extension": [0],
     "react/prefer-es6-class": [0],
-    "import/no-unresolved": [2, { "ignore": ["loader|react-router|css|sass"] }]
+    "import/no-unresolved": [2, { "ignore": ["loader|react-router|css|sass"] }],
+    "import/no-extraneous-dependencies": [0],
+    "import/extensions": [0]
   },
   "globals": {
     "__PREFIX_LINKS__": true,
