--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "async": "^2.0.0-rc.3",
     "front-matter": "^2.0.6",
-    "fs-extra": "0.28.0",
+    "fs-extra": "1.0.0",
     "gatsby": "^0.11.7",
     "glob": "^7.0.3",
     "highlight.js": "^9.2.0",
@@ -39,7 +39,7 @@
     "lodash": "^4.5.0",
     "markdown-it": "^7.0.1",
     "markdown-it-emoji": "^1.2.0",
-    "mdfigcaption": "^0.1.1",
+    "markdown-it-regexp": "^0.4.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.11.2",
     "object-assign": "^4.0.1",
@@ -60,7 +60,7 @@
     "underscore.string": "^3.2.3"
   },
   "devDependencies": {
-    "babel-plugin-add-module-exports": "^0.1.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
