--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "fs-extra": "1.0.0",
     "gatsby": "^0.12.19",
     "highlight.js": "^9.2.0",
+    "imagemin": "^5.2.2",
+    "imagemin-mozjpeg": "^6.0.0",
     "js-yaml": "^3.5.4",
     "lodash": "^4.5.0",
     "markdown-it": "^7.0.1",
