--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "gatsby": "^0.12.19",
     "highlight.js": "^9.2.0",
     "imagemin": "^5.2.2",
-    "imagemin-mozjpeg": "^6.0.0",
+    "imagemin-jpeg-recompress": "^5.1.0",
+    "imagemin-optipng": "^5.2.1",
     "js-yaml": "^3.5.4",
     "lodash": "^4.5.0",
     "markdown-it": "^7.0.1",
