--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "snyk test",
     "start": "npm run lint && gatsby develop",
     "deploy": "gatsby build && gh-pages -d public -b master",
-    "publish": "node new_post.js",
+    "post": "node new_post.js",
     "snyk-protect": "snyk protect",
     "prepublish": "npm run snyk-protect"
   },
