--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "eslint-plugin-react": "^6.6.0",
     "eslint-watch": "^2.1.14",
     "gh-pages": "^0.11.0",
-    "npm-run-all": "^3.1.1"
+    "npm-run-all": "^3.1.1",
+    "yarn": "^0.17.9"
   },
   "snyk": true
 }
