--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "safe-access": "^0.1.0",
     "snyk": "^1.17.1",
     "typography": "^0.15.0",
-    "typography-theme-fairy-gates": "^0.15.0",
+    "typography-theme-lincoln": "^0.15.0",
     "underscore.string": "^3.2.3"
   },
   "devDependencies": {
@@ -66,6 +66,7 @@
     "eslint-watch": "^2.1.14",
     "gh-pages": "^0.11.0",
     "npm-run-all": "^3.1.1",
+    "sass-variables-loader": "^0.1.3",
     "yarn": "^0.17.9"
   },
   "snyk": true
