--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
   "scripts": {
     "lint": "esw --ignore-pattern public --color",
     "lint:watch": "yarn lint -- --watch",
-    "test": "snyk test",
     "gatsby:dev": "gatsby develop",
     "start": "npm-run-all --parallel gatsby:dev lint:watch",
     "deploy": "gatsby build && gh-pages -d public -b master",
-    "post": "node new_post.js",
-    "snyk-protect": "snyk protect",
-    "prepublish": "npm run snyk-protect"
+    "post": "node new_post.js"
   },
   "repository": {
     "type": "git",
@@ -52,7 +49,6 @@
     "react-responsive-grid": "^0.3.3",
     "react-typography": "^0.15.0",
     "safe-access": "^0.1.0",
-    "snyk": "^1.17.1",
     "typography": "^0.15.0",
     "typography-theme-lincoln": "^0.15.0",
     "underscore.string": "^3.2.3"
@@ -68,6 +64,5 @@
     "npm-run-all": "^3.1.1",
     "sass-variables-loader": "^0.1.3",
     "yarn": "^0.17.9"
-  },
-  "snyk": true
+  }
 }
