--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "js-yaml": "^3.5.4",
     "lodash": "^4.5.0",
     "markdown-it": "^7.0.1",
+    "markdown-it-anchor": "^4.0.0",
     "markdown-it-emoji": "^1.2.0",
     "markdown-it-regexp": "^0.4.0",
     "mkdirp": "^0.5.1",
